--- a/PcodeFiles/Main/build.gradle
+++ b/PcodeFiles/Main/build.gradle
@@ -1,8 +1,18 @@
+buildscript {
+    ext.kotlin_version = '1.4.30'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 plugins {
     id "application"
 }
 
 apply from: "$rootProject.projectDir/gradle/distributableGhidraModule.gradle"
+apply plugin: 'kotlin'
 apply from: "$rootProject.projectDir/gradle/javaProject.gradle"
 apply from: "$rootProject.projectDir/gradle/jacocoProject.gradle"
 apply from: "$rootProject.projectDir/gradle/javaTestProject.gradle"
@@ -34,6 +44,7 @@ dependencies {
     implementation project(':Python')
 
     compileOnly "junit:junit:4.12"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 
 rootProject.assembleDistribution {
@@ -41,4 +52,17 @@ rootProject.assembleDistribution {
     from (this.project.file("support/launch.sh"))
     from (this.project.file("support/runPcodeFiles"))
     from (this.project.file("support/runPcodeFiles.bat"))
+}
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
