--- a/PcodeFiles/Main/build.gradle
+++ b/PcodeFiles/Main/build.gradle
@@ -9,13 +9,14 @@ buildscript {
 }
 plugins {
     id "application"
+    id "org.jetbrains.kotlin.jvm" version "1.4.30"
 }
 
 apply from: "$rootProject.projectDir/gradle/distributableGhidraModule.gradle"
-apply plugin: 'kotlin'
 apply from: "$rootProject.projectDir/gradle/javaProject.gradle"
 apply from: "$rootProject.projectDir/gradle/jacocoProject.gradle"
 apply from: "$rootProject.projectDir/gradle/javaTestProject.gradle"
+apply plugin: 'kotlin'
 apply plugin: 'eclipse'
 eclipse.project.name = 'PcodeFiles'
 
@@ -45,6 +46,8 @@ dependencies {
 
     compileOnly "junit:junit:4.12"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    implementation fileTree(dir: 'lib', include: ['*.jar'])
 }
 
 rootProject.assembleDistribution {
@@ -64,5 +67,18 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+}
+
+jar {
+    from {
+        String[] include = [
+                "kotlin-runtime-${kotlin_version}.jar",
+                "kotlin-stdlib-${kotlin_version}.jar"
+        ]
+
+        configurations.compile
+                .findAll { include.contains(it.name) }
+                .collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
