Refactoring and Kotlin

--- a/PcodeFiles/Main/build.gradle
+++ b/PcodeFiles/Main/build.gradle
@@ -29,8 +29,8 @@ task runApp(type: JavaExec) {
     jvmArgs('-Djava.system.class.loader=ghidra.GhidraClassLoader', '-Xshare:off')
     args ('pcodefiles.PcodeFilesRun')
     classpath += project.configurations.runtimeClasspath
-    classpath += files('build/libs/Main.jar')
-    main = "pcodefiles.PcodeFilesLauncher"
+    classpath += files('build/libs/Main.jar', 'kotlin-stdlib-common-1.4.30.jar')
+    main = "ghidra.GhidraLauncher"
 }
 
 dependencies {
@@ -55,6 +55,9 @@ rootProject.assembleDistribution {
     from (this.project.file("support/launch.sh"))
     from (this.project.file("support/runPcodeFiles"))
     from (this.project.file("support/runPcodeFiles.bat"))
+    into (getZipPath(this.project) + "/lib") {
+        from (projectDir.toString() + "/lib")
+    }
 }
 repositories {
     mavenCentral()
